Fix: Prevent stopping on errors
Related to https://github.com/Claudemirovsky/keys/issues/1

--- a/.github/workflows/update_keys.yaml
+++ b/.github/workflows/update_keys.yaml
@@ -59,6 +59,8 @@ jobs:
     permissions:
       actions: write
     needs: update
+    # Always run, except when manually cancelled.
+    if: success() || failure()
     runs-on: ubuntu-latest
     steps:
       # Github schedule event would be much easier to use, but it has a terrible
